--- a/myMultiDexTest/src/main/AndroidManifest.xml
+++ b/myMultiDexTest/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.demo.android.mymultidextest">
 
     <application
-        android:name="android.support.multidex.MultiDexApplication"
+        android:name=".Application.MainApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
